Fix UI : edit profile margins, spacings, font sizes. Member ship "since" format

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -237,6 +237,7 @@ li {
     text-transform: uppercase;
     font-size: 0.5rem;
     font-weight: 600;
+    padding: 0.375rem 0;
 }
 
 .browse-file {
