--- a/assets/css/modules/card.css
+++ b/assets/css/modules/card.css
@@ -52,7 +52,6 @@ Maxi card user à gauche
 
 .card--user-big .card__poster {
     align-items: center;
-    margin-top: 3rem;
 }
 
 .card--user-big .card__content {
